<resources>
    <string name="app_name">User Better Cotton</string>
    <string name="title_task">Task</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="setting">Setting</string>
    <string name="log_out">Logout</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are You Sure Do You Want To Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="total_task_allotted">Total Task Allotted</string>
    <string name="task_in_progress">Task In Progress</string>
    <string name="task_completed">Task Completed</string>
    <string name="growth_chart">Growth Chart</string>
    <string name="task_progress">Task Progress</string>
    <string name="review_the_activity_status">Review The Activity Status</string>
    <string name="assigned_task_progress">Assigned Task Progress</string>
    <string name="update_task_detail">Update Task Detail</string>
    <string name="better_connect">Better Cotton</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="oops_n_no_internet_connection_n_please_check_your_connection">OOPS!\n No Internet Connection \n Please Check Your Connection</string>

    <string name="date_combine_string">%1$s To %2$s</string>
    <string name="activity_combine_String">%1$s  -  %2$s</string>
    <string name="units_combine_String">%1$s / %2$s</string>
    <string name="retry">Retry</string>
    <string name="farmers_present_for_training">Farmers Present for Training</string>
    <string name="male_farmers">Male Farmers</string>
    <string name="update_details">Update Details</string>
    <string-array name="graph_selector">
        <item>Farmer Training</item>
        <item>Farm Labour Training</item>
        <item>Co-Farmers Training</item>
        <item>Disadvantaged Group Training</item>
        <item>Farmers Field Visit</item>
        <item>Farmers Home Visit</item>
        <item>Demo Observation</item>
        <item>Field Demonstration</item>
        <item>Field Day Event</item>
        <item>Data Collection</item>
        <item>Survey</item>
        <item>TCD</item>
        <item>Vermi Compost</item>
        <item>Soil Testing</item>
        <item>Meeting</item>
        <item>Farmers Feedback</item>
        <item>Audio Campaigning</item>
        <item>Water Budgeting Exercise</item>
        <item>Adoption Data Collection</item>
        <item>IPNM</item>
        <item>Goat Unit</item>
        <item>Backyard Poultry </item>
        <item>Drum Support </item>
        <item>PPE kit Support </item>
        <item>Demo Support </item>
        <item>Drip Irrigation </item>
        <item>Plantation </item>
        <item>Vegetable Cultivation </item>
        <item>Waste Decomposer</item>

    </string-array>
</resources>